Fix height of parallax on mobile-sized viewports

--- a/assets/styles/sass/global.scss
+++ b/assets/styles/sass/global.scss
@@ -385,7 +385,7 @@ footer {
     }
 
     .photo {
-        height: 300px;
+        height: 340px;
     }
 
     section,
